# glaucoma-data

./: .gitignore  AGENTS.md  CLAUDE.md  Gemfile  README.md  _config.yml  automation-audit.md  clinical-trials.md  companies.md  documents.md  index.md  indications.md  infographics.md  llms.txt  methodology.md  press-releases.md  programs.md  robots.txt  sitemap.xml  topics.md
_data/: automation_audit.json  clinicaltrials_updates.json  company_documents.json  company_press_releases.yml  company_profiles.json  company_programs.json  watch_audit.json
_includes/: document_list.html  press_release_list.html
_layouts/: company.html  company_document_placeholder.html  default.html  document.html  document_infographic.html
companies/: abbvie-allergan.md  ache-laboratorios.md  alcon.md  (+16 more)
scripts/watch/: .gitignore  RUNBOOK.md  pyproject.toml
scripts/watch/src/glaucoma_watch/: __init__.py  api_drivers.py  bootstrap.py  clinicaltrials_updates.py  dagster_defs.py  db.py  drivers.py  health.py  logging_setup.py  paths.py  pipeline.py  politeness.py  recipes.py  routing.py  runs.py  snapshots.py  watchlist.py
scripts/watch/src/glaucoma_watch/extractors/: __init__.py  html_pdf_links_js.py  playwright_hcp.py  playwright_loadmore.py
scripts/watch/src/retina_watch/: candidates.py  cli.py  dagster_defs.py  export.py  fetcher.py  logging_setup.py  worklist.py
scripts/watch/src/retina_watch/extractors/: base.py  html_pdf_links.py
scripts/watch/tests/: conftest.py  test_candidates.py  test_html_pdf_links.py  test_routing.py  test_watchlist_validation.py  test_worklist.py
(+180 files in other folders)
