[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glaucoma-watch"
version = "0.1.0"
description = "Deterministic source watcher and observability layer for the glaucoma-data archive."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "click>=8.1",
  "structlog>=24.1",
  "tenacity>=8.3",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dagster = [
  "dagster>=1.7",
  "dagster-webserver>=1.7",
]
sentry = [
  "sentry-sdk>=2.0",
]
js = [
  "playwright>=1.42",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
glaucoma-watch = "retina_watch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
